--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <h1>Fristad!</h1>
+    <a href="https://www.fristadkollektivhus.se/">www.fristadkollektivhus.se</a>
   </body>
 </html>
