--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
+  <head>
+    <script>
+			window.location.replace("https://www.fristadkollektivhus.se/");
+		</script>
+  </head>
   <body>
-    <a href="https://www.fristadkollektivhus.se/">www.fristadkollektivhus.se</a>
+    Redirecting to <a href="https://www.fristadkollektivhus.se/">www.fristadkollektivhus.se</a>
   </body>
 </html>
